<resources>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">  Sign Up</string>
    <string name="already_have_an_account">Already have an account?  </string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="logout">Logout</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="user_information">User Information</string>
    <string name="logo">logo</string>
    <string name="user_name">Name : %1$s %2$s</string>
    <string name="user_email">Email address : %s</string>
    <string name="user_contact">Mobile Number : %s</string>
    <string name="app_with_room_database">My App</string>
    <string name="forget_password_click_here">Forget password? Click here</string>
    <string name="update_password">Update Password</string>
    <string name="enter_email_of_existing_account_and_new_password">Enter email of existing account and new password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">profile</string>
    <string name="username">Username</string>
    <string name="user_user_com">user@user.com</string>
    <string name="home">Home</string>
    <string name="image_for_profile">image_for_profile</string>
    <string name="image_area">image_area</string>
    <string name="menu">menu</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="update_profile">Update Profile</string>
    <string name="my_app">My App</string>
    <string name="add_image">add_image</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
</resources>