<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HomeFragment"
    tools:openDrawer="start">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="56dp">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/blue_dark"
                app:popupTheme="@style/ThemeOverlay.AppCompat.ActionBar">

                <ImageView
                    android:id="@+id/menu_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/menu"
                    android:src="@drawable/ic_baseline_menu_24" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_app"
                    android:textColor="@color/white"/>
                <ImageView
                    android:id="@+id/logout_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_logout_25"
                    android:layout_gravity="end"
                    android:paddingEnd="20dp"
                    android:contentDescription="@string/logout"/>
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/base_layout_after_signup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:background="@color/custom_white"
        android:gravity="center_horizontal"
        android:windowSoftInputMode="adjustPan|adjustResize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingHorizontal="18dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="24dp"
                android:text="@string/user_information"
                android:typeface="monospace" />


            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/homePageImageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="centerCrop"
                android:background="@drawable/ic_baseline_person_24"
                app:shapeAppearance="@style/ShapeAppearanceOverlay.App.CornerSize50Percent" />


            <TextView
                android:id="@+id/nameDisplay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="8dp"
                android:text="@string/user_name"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/emailDisplay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="8dp"
                android:text="@string/user_email"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/phoneNumberDisplay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="8dp"
                android:text="@string/user_contact"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal"
            android:paddingHorizontal="18dp">

            <Button
                android:id="@+id/logoutButton2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_input_text"
                android:paddingVertical="20dp"
                android:text="@string/logout"
                android:textAllCaps="false"
                android:textColor="@color/white" />
        </RelativeLayout>
    </RelativeLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#EDEDED"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/app_sidebar">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:padding="20dp"
            android:gravity="bottom">
            <Space
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
            <Button
                android:id="@+id/logoutBtnInDrawer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:text="@string/logout"
                android:textColor="@color/black"
                android:textAllCaps="false"
                android:drawableEnd="@drawable/ic_baseline_logout_24"/>
        </LinearLayout>
    </com.google.android.material.navigation.NavigationView>
</androidx.drawerlayout.widget.DrawerLayout>