<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingHorizontal="18dp"
    tools:context=".fragments.EditProfileFragment">

    <TextView
        android:id="@+id/title_of_edit_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:paddingVertical="12dp"
        android:text="@string/edit_profile"
        android:textAllCaps="false"
        android:textSize="24sp" />

    <RelativeLayout
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_below="@+id/title_of_edit_page"
        android:layout_centerHorizontal="true">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/profile_pic_placeholder"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/ic_baseline_person_24"

            android:scaleType="centerCrop"
            app:shapeAppearance="@style/ShapeAppearanceOverlay.App.CornerSize50Percent" />

        <ImageView
            android:id="@+id/edit_image_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/plus_button"
            android:src="@drawable/ic_baseline_add_24"
            android:contentDescription="@string/add_image"/>
    </RelativeLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edittext_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="18dp"
        android:hint="@string/old_password"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/oldPasswordEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="16dp"
            android:paddingVertical="4dp"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordtextinputlayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edittext_email"
        android:layout_marginTop="18dp"
        android:hint="@string/new_password"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newPasswordEdit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="12dp"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="16dp"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/update_pass_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordtextinputlayout"
        android:background="@drawable/rounded_input_text"
        android:backgroundTint="@color/blue_dark"
        android:paddingVertical="10dp"
        android:text="@string/update_password"
        android:textAllCaps="false"
        android:textColor="@color/white"
        tools:ignore="DuplicateSpeakableTextCheck" />
</RelativeLayout>
